--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "9Gig",
+  "name": "memepoint",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node --watch --trace-warnings --inspect app.js",
+    "prod": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.26.2",
+    "cloudinary": "^2.8.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
@@ -21,12 +22,13 @@
     "jquery": "^3.6.0",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
-    "mongoose": "^5.13.2",
-    "multer": "^1.4.2",
+    "mongoose": "8.9.5",
+    "multer": "2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.4.1",
+    "passport": "0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
-  }
+  },
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
