Update All Project Dependencies and Configurations

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,8 @@
+APP_NAME="My Awesome Meme"
 APP_PORT=8030
 APP_DEBUG_PORT=9229
 PORT=8030
-DB_URL=mongodb://localhost:27017/
+DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_KEY=
 CLOUDINARY_SECRET=
@@ -10,3 +11,4 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 MONGO_INITDB_ROOT_USERNAME=
 MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
