--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch --trace-warnings --inspect app.js",
+    "start": "node --watch --trace-warnings --inspect=0.0.0.0:9229 app.js",
     "prod": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stz184/connect-flash": "^1.0.2",
     "cloudinary": "^2.8.0",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.6",
