Update Migration to Backblaze B2 and Project Improvements

--- a/.env.dist
+++ b/.env.dist
@@ -1,14 +1,19 @@
 APP_NAME="My Awesome Meme"
 APP_PORT=8030
 APP_DEBUG_PORT=9229
-PORT=8030
+SESSION_SECRET=
+
+# Mongo
 DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_KEY=
-CLOUDINARY_SECRET=
-SECRET=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
 MONGO_INITDB_ROOT_USERNAME=
 MONGO_INITDB_ROOT_PASSWORD=
 MONGO_INITDB_DATABASE=
+
+# Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Backblaze b2
+B2_APPLICATION_KEY_ID=
+B2_APPLICATION_KEY=
+B2_BUCKET_NAME=my-awesome-meme
