--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
   "license": "ISC",
   "dependencies": {
     "@stz184/connect-flash": "^1.0.2",
-    "cloudinary": "^2.8.0",
+    "backblaze-b2": "^1.7.1",
     "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.7",
-    "ejs": "^3.1.6",
+    "dotenv": "^16.6.1",
+    "ejs": "^3.1.10",
     "ejs-mate": "^3.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "jquery": "^3.6.0",
+    "express": "^4.21.2",
+    "express-session": "^1.18.2",
+    "jquery": "^3.7.1",
     "method-override": "^3.0.0",
-    "moment": "^2.29.1",
+    "moment": "^2.30.1",
     "mongoose": "8.9.5",
     "multer": "2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "passport": "0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.3.0"
   },
   "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
 }
