--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@stz184/backblaze-b2": "^2.0.3",
+    "@stz184/backblaze-b2": "^2.0.4",
     "@stz184/connect-flash": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^3.0.0",
-    "express": "^4.21.2",
+    "express": "^4.22.1",
     "express-session": "^1.18.2",
     "jquery": "^3.7.1",
     "method-override": "^3.0.0",
+    "mime": "^4.1.0",
     "moment": "^2.30.1",
     "mongoose": "8.9.5",
     "multer": "2.0.2",
@@ -32,6 +33,7 @@
   },
   "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "glob": "^13.0.0"
   }
 }
