Add Facebook login and admin role support; remove tags feature

--- a/.env.dist
+++ b/.env.dist
@@ -2,6 +2,7 @@ APP_NAME="My Awesome Meme"
 APP_PORT=8030
 APP_DEBUG_PORT=9229
 SESSION_SECRET=
+ADMIN_EMAIL=
 
 # Mongo
 DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
@@ -12,6 +13,10 @@ MONGO_INITDB_DATABASE=
 # Google
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Facebook
+FACEBOOK_CLIENT_ID=your_facebook_app_id
+FACEBOOK_CLIENT_SECRET=your_facebook_app_secret
 
 # Backblaze b2
 B2_APPLICATION_KEY_ID=
