--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "8.9.5",
     "multer": "2.0.2",
     "passport": "0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0",
