Add features and updates for improved authentication and post management

--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,7 @@ APP_PORT=8030
 APP_DEBUG_PORT=9229
 SESSION_SECRET=
 ADMIN_EMAIL=
+APP_DOMAIN=https://myawesome.meme
 
 # Mongo
 DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
