--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.3.0",
+    "passport-local-mongoose": "^9.0.1",
+    "passport-remember-me": "^0.0.1",
     "sharp": "^0.34.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "passport": "0.6.0"
+    }
   },
   "packageManager": "pnpm@10.28.2+sha512.41872f037ad22f7348e3b1debbaf7e867cfd448f2726d9cf74c08f19507c31d2c8e7a11525b983febc2df640b5438dee6023ebb1f84ed43cc2d654d2bc326264",
   "devDependencies": {
