--- a/.env.dist
+++ b/.env.dist
@@ -10,6 +10,7 @@ DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
 MONGO_INITDB_ROOT_USERNAME=
 MONGO_INITDB_ROOT_PASSWORD=
 MONGO_INITDB_DATABASE=
+MONGO_PASSWORD=
 
 # Google
 GOOGLE_CLIENT_ID=
