Add Sentry integration and deps
Create sentry.js and initialize Sentry in app.js
(adds @sentry/node and @sentry/tracing to package.json
and pnpm-lock.yaml). Bump pnpm version in Dockerfile and
add APP_ENVIRONMENT=production to .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@ APP_DEBUG_PORT=9229
 SESSION_SECRET=
 ADMIN_EMAIL=
 APP_DOMAIN=https://myawesome.meme
+APP_ENVIRONMENT=production
 
 # Mongo
 DB_URL=mongodb://root:xxxx@mongo:27017/myawesomememe
